<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text23"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:paddingStart="14dp"
         />

    <ImageButton
        android:visibility="invisible"
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_row="0"
        android:layout_column="0"
android:layout_marginTop="13dp"
        android:onClick="backing"
       android:layout_marginStart="340dp"
        android:background="@drawable/button1"
        android:src="@drawable/arrrowbsadf" />

    <LinearLayout
        android:layout_marginTop="210dp"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginVertical="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/imya"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@drawable/edit_text"
            android:hint="@string/text24"
            android:paddingStart="10dp"

            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/mail23"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text"
            android:hint="@string/text25"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text"
            android:hint="@string/text26"
            android:paddingStart="10dp"
            android:inputType="textPassword"
            android:textColorHint="@color/grey" />

        <androidx.appcompat.widget.AppCompatButton
            android:onClick="navigtosett"

            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text3"
            android:text="@string/text27"
            android:textColor="@color/white" />

    </LinearLayout>

</GridLayout>