<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green1">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text22"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <ImageButton
        android:id="@+id/imageView"
        android:onClick="nameandpass"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/avatre" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="464dp"
        android:layout_marginVertical="50dp"
        android:layout_marginTop="28dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_below="@id/textView3">

        <TableRow
            android:layout_width="392dp"
            android:layout_height="44dp">

            <TextView
                android:layout_width="350dp"
                android:layout_height="36dp"
                android:paddingLeft="5dp"
                android:text="@string/text48"
                android:textColor="@color/white"
                android:textSize="22dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/strilka"
                android:paddingStart="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="393dp"
            android:layout_height="44dp">

            <TextView
                android:layout_width="350dp"
                android:layout_height="36dp"
                android:paddingLeft="5dp"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="22dp" />

            <ImageButton
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@drawable/strilka" />
        </TableRow>

        <TableRow
            android:layout_width="393dp"
            android:layout_height="44dp">

            <TextView
                android:layout_width="350dp"
                android:layout_height="36dp"
                android:paddingLeft="5dp"
                android:text="@string/zvuk"
                android:textColor="@color/white"
                android:textSize="22dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/strilka" />
        </TableRow>

        <TableRow
            android:layout_width="394dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="350dp"
                android:layout_height="36dp"
                android:paddingLeft="5dp"
                android:text="@string/obnova"
                android:textColor="@color/white"
                android:textSize="22dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="32dp"
                android:background="@drawable/strilka" />
        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_below="@id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"

        android:background="@drawable/butoon23"
        android:orientation="horizontal"
        android:paddingTop="3dp">

        <LinearLayout
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:onClick="list"
                android:background="@drawable/dfgdfg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:text="@string/list"
                android:textColor="@color/red2"
                android:textSize="11dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:onClick="ALARM"
                android:background="@drawable/dfgdg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:text="@string/alarm"

                android:textColor="@color/red2"
                android:textSize="11dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:onClick="CALIK"
                android:background="@drawable/asdadad" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/calik"
                android:textColor="@color/red2"
                android:textSize="11dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ghghf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="@string/seting"
                android:textColor="@color/green1"
                android:textSize="11dp" />
        </LinearLayout>


    </LinearLayout>



</RelativeLayout>
